# cookiecutter-pypackage

./: CONTRIBUTING.rst  LICENSE  README.rst  cookiecutter.json  requirements_dev.txt  setup.py
docs/: conf.py  pypi_release_checklist.rst  troubleshooting.rst  tutorial.rst
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.rst  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  custom_logging.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
