[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.rst"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
maintainers = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
classifiers = [
]
license = {text = "{{cookiecutter.open_source_license}}"}

dependencies = [
    "structlog",
{% if cookiecutter.command_line_interface.lower() == "typer" -%}
    "typer",
{%- endif %}
]

[project.optional-dependencies]
dev = [
    "nox",
    "pre-commit", # pre-commit hoooks
    "uv",  # package installer and resolver
]
test = [
    "pytest", "pytest-cov",
]

[project.urls]
bugs = "https://github.com/{{cookiecutter.__gh_slug}}/issues"
changelog = "https://github.com/{{cookiecutter.__gh_slug}}/blob/master/changelog.md"
homepage = "https://github.com/{{cookiecutter.__gh_slug}}"

{% if cookiecutter.command_line_interface == 'Yes' %}
[project.scripts]
{{cookiecutter.slug}} = "{{cookiecutter.slug}}.cli:app"
{% endif %}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Ruff
# ----
[tool.ruff]
line-length = 120
src = ["src", "tests"]
exclude = [
	"*cookiecutter.project_slug*"
]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, and `F`), enable isort (`I`)
extend-select = ["I"]

# uv
# ----
[tool.uv.pip]
emit-index-url = true
no-strip-extras = true
no-strip-markers = true

# Mypy
# ----
[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
